# mCaptcha

./: .dockerignore  .env.docker-compose  .env_sample  .eslintrc.js  .gitignore  .woodpecker.yaml  .zuul.yaml  CHANGELOG.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  Dockerfile  Makefile  README.md  build.rs  crates.js  docker-compose.yml  eslint.config.js  help.html  jest.config.ts  mCaptcha-guard.postman_collection.json  network.sh  openapi.yaml  package-lock.json  package.json  renovate.json  rustfmt.toml  sailfish.toml  sailfish.yml  search-index.js  settings.html  source-files.js  sqlx-data.json  src-files.js  tsconfig.json  webpack.config.js  webpack.dev.js  webpack.prod.js
browser/: .gitignore  Cargo.toml  LICENSE_MIT  README.md
browser/src/: lib.rs
browser/static/: embeded.html  index.html
browser/tests/: web.rs
db/db-core/: Cargo.toml
db/db-core/src/: errors.rs  lib.rs  ops.rs  tests.rs
db/db-migrations/: Cargo.toml
db/db-migrations/src/: main.rs
db/db-sqlx-maria/: .gitignore  Cargo.toml  sqlx-data.json
db/db-sqlx-maria/.sqlx/: query-1367dceb151a766a901b5dd771d0b75d0bc61d2fef17a94a90c8ffa0065e2c44.json  query-14dc89b2988b221fd24e4f319b1d48f5e6c65c760c30d11c9c29087f09cee23a.json  query-216478d53870d7785cd0be43f030883ab79eaafb558d9197d09aea3adbd7b0bc.json  query-22e697114c3ed5b0156cdceab11a398f1ef3a804f482e1cd948bc615ef95fc92.json  query-349ba17ff197aca7ee9fbd43e227d181c27ae04702fd6bdb6ddc32aab3bcb1ea.json  query-34b29417f9ff3f4d5987df0ce81023b1985eb84e560602b36182f55de6cd9d83.json  query-3812693a9ae4402d900bcbf680981e6194073bd1937af11a77daa3776fb4c873.json  query-3a8381eb0f0542a492d9dd51368e769e2b313e0576a1873e5c7630011e463daf.json  query-413ea53cea8b8f114fc009bad527b054a68a94477dfcc50d860d45bbd864d4f1.json  query-42d967d6e080efd3cff8d4df13ea4d2ff38f3093da5c97000349dfc23c4d4eb3.json  query-598a8202942771eff460faa6f09bd3fb1fc910d5fab7edb07c49dadbbaeb1cb8.json  query-5ad1ef722a961183228d851813b9f50284520bf8cc8118c765b72c108daaf6fb.json  query-5d5a106981345e9f62bc2239c00cdc683d3aaaa820d63da300dc51e3f6f363d3.json  query-6094468b7fa20043b0da90e366b7f1fa29a8c748e163b6712725440b25ae9361.json  query-66ec7df10484f8e0206f3c97afc9136021589556c38dbbed341d6574487f79f2.json  query-676a9f1761c3b63cf16d7d4dd6261507cc7707feb32d458f4b946ed9caa53721.json  query-6d1b6e5e58ca2ba285cab7b050bbdc43de1f3e46cf7d420bc95c124a1c7c9d1f.json  query-6d43e6ceb54a0ff8a803bd96dd9134b15da01d48776ac0cf3d66a2997dadce5e.json  query-74d68a86f852d3d85957e94ed04e8acd8e6144744f7b13e383ebcb2bcf3360ae.json  query-7838ade4a48068e25c6f117ee8e38f088b867b1ab08a7dd0269b76891266ace6.json  query-7894dda54cd65559fe3b81bab7df8cc848e21ed5c7f5e88951bf1c98c78ed820.json  query-89386c46668a2653a54687e65958af5cf7a8da268339a1f5a379ede47b3c6d2a.json  query-8acbf84d4801e86221d8f6324ae50488a0986182d66b20ad414bce4e2ac18eca.json  query-8e6026abf7c0e8ab90ee8eb7ada9f66962ab6999d3127944b058d6f96346e72f.json  query-8ec8bbde0c02a99f74d12e6778f123a973283e6d56b6861b30f559768617848a.json  query-9bae79667a8cc631541879321e72a40f20cf812584aaf44418089bc7a51e07c4.json  query-9c435148ed5655e79dd1e73e3566ce23b7c6d38edcedbb988c95813c5da893ed.json  query-9cb416de904872d66af90baa0024f382ce6f8344464c607fe6e6c2572816dfc2.json  query-9def82dcec9c8d477824182bb2f71044cc264cf2073ab4f60a0000b435ed0f0b.json  query-9e45969a0f79eab8caba41b0d91e5e3b85a1a68a49136f89fc90793c38f00041.json  query-9f10afb0f242f11c58389803c5e85e244cc59102b8929a21e3fcaa852d57a52c.json  query-a89c066db044cddfdebee6a0fd0d80a5a26dcb7ecc00a9899f5634b72ea0a952.json  query-b739ec4cfab1ec60947106c8112e931510c3a50a1606facdde0c0ebb540d5beb.json  query-b9258c2494d95701d19703cf5cd05a222057a0ccad943192138b1a4a94bf823b.json  query-b95e5a60a202cb646d5e76df8c7395e4bf881a6dd14e28e6f2e8b93e0536b331.json  query-c4aeba65b8bcd0f62ef79ed6549b4960d92dadfaf88401d7e2faacb93a2be169.json  query-c4d6ad934e38218931e74ae1c31c6712cbadb40f31bb12e160c9d333c7e3835c.json  query-caa1638ee510ef62b86817e5d2baeaca8dfa432c23d7630c0e70737211a4680b.json  query-cad5b403470f26c565e74a1dca19b7dee066141dec0f708070067e34d5bf72cc.json  query-d05b84966f4e70c53789221f961bf3637f404f3ba45e880115e97ed1ba5a2809.json  (+15 more)
db/db-sqlx-maria/migrations/: 20210310122154_mcaptcha_users.sql  20210310122617_mcaptcha_config.sql  20210310122902_mcaptcha_levels.sql  20210430032935_mcaptcha_pow_fetched_stats.sql  20210509135118_mcaptcha_pow_solved_stats.sql  20210509135154_mcaptcha_pow_confirmed_stats.sql  20210509151150_mcaptcha_notifications.sql  20211202141927_mcaptcha_sitekey_user_provided_avg_traffic.sql  20211218133703_change_user_provided_avg_traffic_col_datatype.sql  20220526114806_alter_notifications_table.sql  20230610113728_mcaptcha_challenge.sql  20230627132800_mcaptcha_pow_analytics.sql  20230629185331_mcaptcha_psuedo_campaign_id.sql  20231029000927_mcaptcha_track_nonce.sql
db/db-sqlx-maria/src/: errors.rs  get_all_unread_notifications.sql  lib.rs  mark_notification_read.sql  tests.rs
db/db-sqlx-postgres/: Cargo.toml  sqlx-data.json
db/db-sqlx-postgres/.sqlx/: query-017576128f1c63aee062799a33f872457fe19f5d6429d0af312dc00c244b31cb.json  query-02deb524bb12632af9b7883975f75fdc30d6775d836aff647add1dffd1a4bc00.json  query-044e2036a518de2ccac9318ccba07f7ce10e4a1c1d51d0128ea5e8cb94358ac5.json  query-0840af95cc17c8ea6fc994e53696d4dec39ef9b4b6dd6c58c21cc44ccbb4bd09.json  query-0e7a1a38019c5e88ebd096fc5f6031aaa7f337fe735aa44c4e31bd6e51163749.json  (+50 more)
frontend/: .gitignore  Cargo.toml  all.html  build.rs  constant.BASE_DIR.html  fn.main.html  fn.path.html  fn.rel_path.html  fn.root_path.html  index.html  main  main.rs  package.json  sidebar-items.js  struct.FILES.html  struct.IndexPage.html  type.Literal.html  webpack.common.js  webpack.dev.js  webpack.prod.js
frontend/panel/: constant.TITLE.html  index.html  sidebar-items.js  struct.IndexPage.html
frontend/prod/: index.html
frontend/public/: index.html
frontend/signup/: index.html  sidebar-items.js  struct.IndexPage.html
frontend/src/: main.rs
frontend/templates/: index.html  index.js  index.stpl  main.scss  router.js
src/: db.rs  (+15 more)
utils/cache-bust/: .gitignore  Cargo.toml
(+2664 files in other folders)
