[package]
name = "mcaptcha"
version = "0.1.0"
description = "mCaptcha - a PoW-based CAPTCHA system"
homepage = "https://mcaptcha.org"
repository = "https://github.com/mCaptcha/mCaptcha"
documentation = "https://mcaptcha.org/docs/"
license = "AGPLv3 or later version"
authors = ["realaravinth <realaravinth@batsense.net>"]
edition = "2018"
default-run = "mcaptcha"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mcaptcha"
path = "./src/main.rs"

[[bin]]
name = "tests-migrate"
path = "./src/tests-migrate.rs"

[dependencies]
#actix-web = "3.3.2"
actix-web = "4.0.0-beta.8"
actix = "0.12"
#actix-identity = "0.3"
actix-identity = "0.4.0-beta.2"
actix-http = "3.0.0-beta.8"
#actix-http = "2.2"
actix-rt = "2"
#actix-cors= "0.5.4"
actix-cors = "0.6.0-beta.2"
#actix-service = "0.0.6"
actix-service = "2.0.0"
my-codegen = {package = "actix-web-codegen", git ="https://github.com/realaravinth/actix-web"}

mime_guess = "2.0.3"
rust-embed = "5.9.0"
cache-buster = { git = "https://github.com/realaravinth/cache-buster" }

futures = "0.3.15"

sqlx = { version = "0.5.5", features = [ "runtime-actix-rustls", "postgres", "time", "offline" ] }
argon2-creds = { branch = "master", git = "https://github.com/realaravinth/argon2-creds"}
#argon2-creds = { version="*", path = "../../argon2-creds/" }
config = "0.11"
validator = { version = "0.14", features = ["derive"]}

derive_builder = "0.10"
derive_more = "0.99"

serde = "1"
serde_json = "1"
serde_yaml = "0.8.17"

url = "2.2"

pretty_env_logger = "0.4"
log = "0.4"

lazy_static = "1.4"


libmcaptcha = { branch = "master", git = "https://github.com/mCaptcha/libmcaptcha", features = ["full"] }
#libmcaptcha = { path = "../libmcaptcha", features = ["full"]}

rand = "0.8"

sailfish = "0.3.2"

mime = "0.3.16"

lettre = { version = "0.10.0-rc.3", features = [
"builder", 
"tokio1", 
"tokio1-native-tls",
"smtp-transport"
]}


[build-dependencies]
serde_yaml = "0.8.17"
serde_json = "1"
yaml-rust = "0.4.5"
cache-buster = { version = "0.2.0", git = "https://github.com/realaravinth/cache-buster" }
mime = "0.3.16"

[dev-dependencies]
pow_sha256 = { version = "0.2.1", git = "https://github.com/mcaptcha/pow_sha256" }
awc = "3.0.0-beta.7"


[target.x86_64-unknown-linux-musl]
linker = "x86_64"
